refactor: DTO에서 options -> foodOptions로 명명 변환, toEntity와 fromEntity를 Builder 패턴으로 수정