@@ -1,19 +1,23 @@
 package com.sparta.first.project.eighteen.domain.foods.dtos;
 
+import java.util.ArrayList;
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 import com.sparta.first.project.eighteen.model.foods.FoodStatus;
 import com.sparta.first.project.eighteen.model.foods.Foods;
 
 import lombok.AllArgsConstructor;
+import lombok.Builder;
 import lombok.Getter;
 import lombok.NoArgsConstructor;
+import lombok.ToString;
 
 @Getter
 @AllArgsConstructor
 @NoArgsConstructor
+@Builder
+@ToString
 public class FoodResponseDto {
 	private UUID id;
 	private UUID storeId;
@@ -24,23 +28,28 @@ public class FoodResponseDto {
 	private FoodStatus foodStatus;
 	private boolean isRecommended;
 	private int foodOrderCount;
-	private List<FoodOptionResponseDto> options;
+	private List<FoodOptionResponseDto> foodOptions;
 
 	public static FoodResponseDto fromEntity(Foods food) {
-		return new FoodResponseDto(
-			food.getId(),
-			food.getStore().getId(),
-			food.getFoodName(),
-			food.getFoodDesc(),
-			food.getFoodPrice(),
-			food.getFoodImageUrl(),
-			food.getFoodStatus(),
-			food.isRecommended(),
-			food.getFoodReviewCount(),
-			food.getFoodOrderCount(),
-			food.getFoodOptions().stream()
+
+		List<FoodOptionResponseDto> optionsDto = new ArrayList<>();
+
+		if (food.getFoodOptions() != null) {
+			optionsDto = food.getFoodOptions().stream()
 				.map(FoodOptionResponseDto::fromEntity)
-				.collect(Collectors.toList())
-		);
+				.toList();
+		}
+
+		return FoodResponseDto.builder()
+			.id(food.getId())
+			.storeId(food.getStore().getId())
+			.foodName(food.getFoodName())
+			.foodDesc(food.getFoodDesc())
+			.foodPrice(food.getFoodPrice())
+			.foodImageUrl(food.getFoodImageUrl())
+			.isRecommended(food.isRecommended())
+			.foodOrderCount(food.getFoodOrderCount())
+			.foodOptions(optionsDto)
+			.build();
 	}
 }
